##########################
# Automake configuration #
##########################
ACLOCAL_AMFLAGS = -I m4

AM_CPPFLAGS = -Wall -I$(srcdir)/include -pthread
AM_CXXFLAGS = -std=c++1y
AM_LDFLAGS = -pthread

# Pre-declare all used variables.
EXTRA_DIST =
CLEANFILES =
DISTCLEANFILES =
check_PROGRAMS =
check_SCRIPTS =
TESTS =
TEST_EXTENSIONS =
BUILT_SOURCES =

#########
# Tests #
#########
include tests/Makefile.am
